tests/error/struct_errors/constructor_arg_mismatch_poly.err
Error: Type mismatch (at $FILE:19:16)
   | 
17 | @guppy(module)
18 | def main() -> None:
19 |     MyStruct(0, False)
   |                 ^^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
